--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.PackageDependencyResolution.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.PackageDependencyResolution.targets
@@ -25,7 +25,10 @@ Copyright (c) .NET Foundation. All rights reserved.
 
     <!-- Note that the assets.cache file has contents that are unique to the current TFM and configuration and therefore cannot
          be stored in a shared directory next to the assets.json file -->
-    <ProjectAssetsCacheFile Condition="'$(ProjectAssetsCacheFile)' == ''">$(IntermediateOutputPath)$(MSBuildProjectName).assets.cache</ProjectAssetsCacheFile>
+    <ProjectAssetsCacheDirectory>$(IntermediateOutputPath)</ProjectAssetsCacheDirectory>
+    <ProjectAssetsCacheDirectory Condition="'$(PrecomputeOutputDir)' != ''">$(PrecomputeOutputDir)</ProjectAssetsCacheDirectory>
+    
+    <ProjectAssetsCacheFile Condition="'$(ProjectAssetsCacheFile)' == ''">$(ProjectAssetsCacheDirectory)$(MSBuildProjectName).assets.cache</ProjectAssetsCacheFile>
     <ProjectAssetsCacheFile>$([MSBuild]::NormalizePath($(MSBuildProjectDirectory), $(ProjectAssetsCacheFile)))</ProjectAssetsCacheFile>
 
     <!-- Don't copy local for netstandard projects. -->
@@ -172,9 +175,11 @@ Copyright (c) .NET Foundation. All rights reserved.
   <UsingTask TaskName="Microsoft.NET.Build.Tasks.CheckForTargetInAssetsFile"
            AssemblyFile="$(MicrosoftNETBuildTasksAssembly)" />
   <UsingTask TaskName="Microsoft.NET.Build.Tasks.JoinItems"
-           AssemblyFile="$(MicrosoftNETBuildTasksAssembly)" />
+           AssemblyFile="$(MicrosoftNETBuildTasksAssembly)"
+           PrecomputationMode="Static" />
   <UsingTask TaskName="Microsoft.NET.Build.Tasks.ResolvePackageAssets"
-            AssemblyFile="$(MicrosoftNETBuildTasksAssembly)" />
+            AssemblyFile="$(MicrosoftNETBuildTasksAssembly)"
+            PrecomputationMode="Static" />
   
   <!-- The condition on this target causes it to be skipped during design-time builds if
         the restore operation hasn't run yet.  This is to avoid displaying an error in
